# unix-v6pp-filesystem-editor

./: .gitignore  Makefile  README.md  makefile.inc
FileScanner/: CMakeLists.txt  main.cpp
FileScanner/src/: main.cpp  makefile
FsEditor/: CMakeLists.txt  FileSystemAdapter.cpp  FileSystemAdapter.h  MachineProps.h  main.cpp
FsEditor/src/: makefile
FsEditor/src/FileSystemAdapter/: FileSystemAdapter.cpp  makefile
FsEditor/src/MockFileSystem/: MockFileSystem.cpp  makefile
FsEditor/src/entry/: main.cpp  makefile
FsEditor/src/include/: FileSystemAdapter.h  MachineProps.h  MacroDefines.h  MockFileSystem.h
FsEditor/src/include/structures/: Block.h  Inode.h  InodeDirectory.h  SuperBlock.h
FsEditor/src/structures/: Inode.cpp  InodeDirectory.cpp  SuperBlock.cpp  makefile
FsEditor/structures/: Inode.cpp  InodeDirectory.cpp  InodeDirectory.h  SuperBlock.cpp
output/: README.md
output/programs/demos/: cpfile  forks  sig  test
output/programs/etc/: greetings!
